tests/failing/2-compile_time_uint_is_not_int/main.rgo
int: @int
uint: @uint

accept_int: (value: int!, ok: ()) {
    ok()
}

forward_uint: (value: uint!, ok: ()) {
    accept_int(value, ok)
}

main: () {
    forward_uint(1, @exit(0))
}
